# api/src/adminers/adminers.controller.ts
@@ -13,6 +13,9 @@ import { Response } from 'express';
 import { CurrentAdminer } from 'src/models/current.adminer';
 import { RegistRespModel } from './models/regist.resp.model';
 import { LoginRespModel } from './models/login.resp.model';
+import { LogoutRespModel } from './models/logout.resp.model';
+import { ProfileRespModel } from './models/profile.resp.model';
+import { RefreshTokenRespModel } from './models/refresh-token.resp.model';
 import { AdminersService } from './adminers.service';
 import { RegistAdminerDTO } from './adminers.dto';
 
@@ -58,16 +61,16 @@ export class AdminersController {
 
   @Post('logout')
   @UseGuards(AuthGuard('jwt-adminer'))
-  async logout(@Req() req, @Res({ passthrough: true }) res: Response) {
+  async logout(@Req() req, @Res({ passthrough: true }) res: Response): Promise<LogoutRespModel> {
     res.cookie('auth-cookie-adminer', '', { httpOnly: true });
     await this.adminerService.clearRefreshToken(req.user.id);
-    return { msg: 'success' };
+    return { statusCode: 201, message: 'success' };
   }
 
   @Get('profile')
   @UseGuards(AuthGuard('jwt-adminer'))
-  getProfile(@Req() req: { user }) {
-    return req.user;
+  getProfile(@Req() req: { user }): ProfileRespModel {
+    return { statusCode: 200, message: 'success', data: req.user };
   }
 
   @Get('refresh-tokens')
@@ -75,7 +78,7 @@ export class AdminersController {
   async regenerateTokens(
     @Req() req,
     @Res({ passthrough: true }) res: Response,
-  ) {
+  ): Promise<RefreshTokenRespModel> {
     const token = await this.adminerService.getJwtToken(
       req.user as CurrentAdminer,
     );
@@ -86,6 +89,6 @@ export class AdminersController {
     };
 
     res.cookie('auth-cookie-adminer', secretData, { httpOnly: true });
-    return { msg: 'success' };
+    return { statusCode: 200, message: 'success' };
   }
 }
